tests/fixtures/invalid/none_rshift_none.py
# Cannot right shift None and None
x: None = None >> None
